--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,14 @@ services:
     image: mysql:latest
     container_name: mysql
     restart: always
+    env_file:
+      - .env
     ports:
-      - "3306:3306"
+      - "${MYSQL_PORT}:${MYSQL_PORT}"
     volumes:
       - ./db-mysql/data:/var/lib/mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: password
     networks:
       - deep-sea
     tty: true
@@ -20,10 +24,12 @@ services:
     depends_on:
       - mysql
     restart: always
+    env_file:
+      - .env
     ports:
-      - "443:443"
-    volumes:
-      - ./backend-spring/Backend:/Backend
+      - "${SPRING_PORT}:${SPRING_PORT}"
+    #volumes:
+    #  - ./backend-spring/Backend:/Backend
     networks:
       - deep-sea
     tty: true
@@ -35,10 +41,12 @@ services:
     depends_on:
       - spring
     restart: always
+    env_file:
+      - .env
     ports:
-      - "3000:3000"
-    volumes:
-      - ./frontend-react/Frontend:/Frontend
+      - "${REACT_PORT}:${REACT_PORT}"
+    #volumes:
+    #  - ./frontend-react/Frontend:/Frontend
     networks:
       - deep-sea
     tty: true
