--- a/.env
+++ b/.env
@@ -2,16 +2,17 @@
 MYSQL_DATABASE=DEEPSEA
 MYSQL_ROOT_PASSWORD=1436
 MYSQL_PORT=3306
+DB_HOST=mysql
 
 # BACKEND
-SPRING_HOST=115.85.181.92
+SPRING_HOST=spring
 SPRING_PORT=443
 SSL_PASSWORD=123456
 
 # FRONTEND
-REACT_HOST=115.85.181.92
+REACT_HOST=react
 REACT_PORT=3000
 
 # REACT_APP
-REACT_APP_SPRING_HOST=115.85.181.92
-REACT_APP_SPRING_PORT=443
+REACT_APP_NCP_IP=115.85.181.92
+REACT_APP_NCP_PORT=443
