Refactor: docker compose depends_on 순서 롤백, Dockerfile 수정

--- a/backend-spring/Dockerfile
+++ b/backend-spring/Dockerfile
@@ -1,7 +1,7 @@
 FROM openjdk:17-alpine
 
 RUN apk update && apk add git && \
-	git clone https://github.com/Under-The-C/Backend.git
+	git clone -b develop https://github.com/Under-The-C/Backend.git
 
 WORKDIR /Backend
 
