--- a/frontend-react/Dockerfile
+++ b/frontend-react/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:18-alpine
 
 RUN apk update && apk add git && \
-	git clone https://github.com/Under-The-C/Frontend.git
+	git clone -b develop https://github.com/Under-The-C/Frontend.git
 
 WORKDIR /Frontend
 
