Feat: env를 활용한 Dockerfile 이미지 빌드

--- a/.env
+++ b/.env
@@ -9,9 +9,17 @@ SPRING_HOST=spring
 SPRING_PORT=443
 SSL_PASSWORD=123456
 
+BACKEND_GIT_URL=https://github.com/Under-The-C/Backend.git
+BACKEND_GIT_BRANCH=develop
+BACKEND_WORKDIR=/Backend
+
 # FRONTEND
 REACT_HOST=react
 REACT_PORT=3000
+
+FRONTEND_GIT_URL=https://github.com/Under-The-C/Frontend.git
+FRONTEND_GIT_BRANCH=develop
+FRONTEND_WORKDIR=/Frontend
 
 # REACT_APP
 REACT_APP_NCP_IP=115.85.181.92
