--- a/backend-spring/Dockerfile
+++ b/backend-spring/Dockerfile
@@ -1,8 +1,14 @@
 FROM openjdk:17-alpine
 
-RUN apk update && apk add git && \
-	git clone -b develop https://github.com/Under-The-C/Backend.git
+ARG GIT_URL
+ARG GIT_BRANCH
+ARG MY_WORKDIR
 
-WORKDIR /Backend
+RUN apk update && apk add git && \
+	git clone -b $GIT_BRANCH $GIT_URL $MY_WORKDIR
+
+COPY fastbuild.sh $MY_WORKDIR
+
+WORKDIR $MY_WORKDIR
 
 ENTRYPOINT ["sh", "fastbuild.sh"]
