--- a/frontend-react/Dockerfile
+++ b/frontend-react/Dockerfile
@@ -1,8 +1,14 @@
 FROM node:18-alpine
 
-RUN apk update && apk add git && \
-	git clone -b develop https://github.com/Under-The-C/Frontend.git
+ARG GIT_URL
+ARG GIT_BRANCH
+ARG MY_WORKDIR
 
-WORKDIR /Frontend
+RUN apk update && apk add git && \
+	git clone -b $GIT_BRANCH $GIT_URL $MY_WORKDIR
+
+COPY fastbuild.sh $MY_WORKDIR
+
+WORKDIR $MY_WORKDIR
 
 ENTRYPOINT ["sh", "fastbuild.sh"]
