Refacor: env 수정

--- a/.env
+++ b/.env
@@ -21,6 +21,8 @@ FRONTEND_GIT_URL=https://github.com/Under-The-C/Frontend.git
 FRONTEND_GIT_BRANCH=develop
 FRONTEND_WORKDIR=/Frontend
 
+# NCP
+NCP_IP=115.85.181.92
+
 # REACT_APP
 REACT_APP_NCP_IP=115.85.181.92
-REACT_APP_NCP_PORT=443
