--- a/backend-spring/Dockerfile
+++ b/backend-spring/Dockerfile
@@ -6,7 +6,7 @@ ARG MY_WORKDIR
 
 RUN apt-get update && apt-get upgrade
 
-RUN sudo apt-get install openjdk-17-jdk
+RUN apt-get install openjdk-17-jdk
 
 RUN apt-get install git && \
 	git clone -b $GIT_BRANCH $GIT_URL $MY_WORKDIR
